fixed bugs v2